Minor CSS enhancements

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -902,11 +902,14 @@ td.adminSeparator hr {
 }
 
 .admin-table {
+    thead th {
+        text-transform: uppercase;
+    }
+    th, td {
+        padding: 12px;
+    }
 	.disabled {
 		.muted();
-	}
-	.centered {
-		text-align: center;
 	}
 	.progress-info {
 		min-width: 260px;
