--- a/src/Presentation/SmartStore.Web/Views/Common/EntityPickerList.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/EntityPickerList.cshtml
@@ -17,7 +17,7 @@
 		@if (item.ImageUrl.HasValue())
 		{
 			<div class="thumb">
-				<img src="@item.ImageUrl" alt="" />
+				<img class="img-polaroid" src="@item.ImageUrl" alt="" />
 			</div>
 		}
 		<div class="data">
