--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.Mobile.cshtml
@@ -75,7 +75,7 @@
         using (Html.BeginRouteForm("ShoppingCart", FormMethod.Post, new Dictionary<string, Object> { { "data-ajax", "false" }, { "enctype", "multipart/form-data" } }))
         {
         <div class="cart">
-            <ul data-role="listview" data-inset="true" data-filter="false">
+            <ul data-role="listview" data-inset="true" data-filter="false" class="list-order-products">
                 @foreach (var item in Model.Items)
                 {
                     <li>
@@ -155,6 +155,15 @@
                                     </div>
                                 }
                             </div>
+							@if (!Model.IsEditable && item.IsDownload && item.HasUserAgreement)
+							{
+								<div class="download-agreement">
+									<label>
+										<input type="checkbox" name="AgreeUserAgreement@(item.ProductId)">
+										@T("DownloadableProducts.UserAgreementConfirmation", item.ProductId)
+									</label>
+								</div>
+							}
                             @if (Model.IsEditable)
                             {
                                 <div class="updateitem">
@@ -276,3 +285,18 @@
     }
     @Html.Widget("mobile_order_summary_content_after")
 </div>
+
+@if (!Model.IsEditable && Model.Items.Any(x => x.IsDownload && x.HasUserAgreement))
+{
+	<script type="text/javascript">
+		$(document).ready(function () {
+			$('a.download-user-agreement').click(function () {
+				var url = '@(Url.Action("GetUserAgreement", "Download"))?asPlainText=true&productId=' + $(this).attr('data-id');
+				$.get(url, function (text) {
+					alert(text);
+				});
+				return false;
+			});
+		});
+	</script>
+}
