--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.Mobile.cshtml
@@ -76,14 +76,16 @@
                         $(function () {
                             $('.confirm-order-next-step-button').click(function () {
                             	var termOfServiceOk = true,
-									userAgreementsOk = true;
+									userAgreementsOk = true,
+									esdRevocationWaiverOk = true,
+									alertMessage;
 
                             	// terms of services
                                 @if (Model.TermsOfServiceEnabled)
                                 {
                                     <text>
                                         if (!$('#termsofservice').is(':checked')) {
-                                            alert('@T("Checkout.TermsOfService.PleaseAccept")');
+                                            alertMessage = '@T("Checkout.TermsOfService.PleaseAccept")';
                                             termOfServiceOk = false;
                                         }
                                         else {
@@ -96,12 +98,30 @@
                             	$('ul.list-order-products').find('input[name^=AgreeUserAgreement]').each(function () {
                             		if (!$(this).is(':checked')) {
                             			userAgreementsOk = false;
-                            			alert('@T("Checkout.DownloadUserAgreement.PleaseAgree")');
+                            			if (!alertMessage) {
+                            				alertMessage = '@T("Checkout.DownloadUserAgreement.PleaseAgree")';
+                            			}
                             			return false;
                             		}
                             	});
-								
-                            	if (termOfServiceOk && userAgreementsOk) {
+
+                            	// agree esd revocation waiver
+								@if(Model.ShowEsdRevocationWaiverBox)
+								{
+									<text>
+                            		$('ul.list-order-products').find('input[name^=AgreeEsdRevocationWaiver]').each(function () {
+                            			if (!$(this).is(':checked')) {
+                            				esdRevocationWaiverOk = false;
+                            				if (!alertMessage) {
+                            					alertMessage = '@T("Checkout.EsdRevocationWaiverConfirmation.PleaseAgree")';
+                            				}
+                            				return false;
+                            			}
+                            		});
+                            		</text>
+								}
+
+                            	if (termOfServiceOk && userAgreementsOk && esdRevocationWaiverOk) {
                             		var submitOrderEvent = jQuery.Event('submitOrder');
                             		submitOrderEvent.isOrderValid = true;
                             		submitOrderEvent.isMobile = true;
@@ -111,7 +131,10 @@
                             		if (true === submitOrderEvent.isOrderValid) {
                             			$('#confirm-order-form').submit();
                             		}
-                                }
+                            	}
+                            	else if (alertMessage) {
+                            		alert(alertMessage);
+                            	}
                             });
                         });
                     </script>
