--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.Mobile.cshtml
@@ -164,6 +164,15 @@
 									</label>
 								</div>
 							}
+							@if (!Model.IsEditable && Model.DisplayEsdRevocationWaiverBox && item.IsEsd)
+							{
+								<div class="esd-revocation-waiver">
+									<label>
+										<input type="checkbox" name="AgreeEsdRevocationWaiver@(item.ProductId)">
+										@T("Checkout.EsdRevocationWaiverConfirmation")
+									</label>
+								</div>
+							}
                             @if (Model.IsEditable)
                             {
                                 <div class="updateitem">
