Resolves #738 Implement download of pictures via URLs in product import

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/DataExchange.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/DataExchange.cshtml
@@ -43,5 +43,14 @@
 				@Html.ValidationMessageFor(model => model.ImageImportFolder)
 			</td>
 		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.ImageDownloadTimeout)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.ImageDownloadTimeout)
+				@Html.ValidationMessageFor(model => model.ImageDownloadTimeout)
+			</td>
+		</tr>
 	</table>
 }
