Minor CSS optimization

--- a/src/Presentation/SmartStore.Web/Views/Shared/_ProductBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_ProductBox.cshtml
@@ -182,7 +182,7 @@
                     rel="tooltip nofollow"
                     data-type="cart"
                     data-action="add">
-                    <i class="fa fa-cart-arrow-down"></i>      
+                    <i class="fa fa-lg fa-cart-arrow-down"></i>      
                 </a>
 			}
 			else
