--- a/src/Presentation/SmartStore.Web/Content/bootstrap/forms.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/forms.less
@@ -124,7 +124,7 @@ input[type="color"],
 .uneditable-input {
   background-color: @inputBackground;
   border: 1px solid @inputBorder;
-  .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+  //.box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
 
   // Focus state
   &:focus {
@@ -195,7 +195,7 @@ input[type="checkbox"]:focus {
   color: @grayLight;
   background-color: darken(@inputBackground, 1%);
   border-color: @inputBorder;
-  .box-shadow(inset 0 1px 2px rgba(0,0,0,.025));
+  //.box-shadow(inset 0 1px 2px rgba(0,0,0,.025));
   cursor: not-allowed;
 }
 
@@ -385,8 +385,8 @@ select:focus:required:invalid {
   border-color: #ee5f5b;
   &:focus {
     border-color: darken(#ee5f5b, 10%);
-    @shadow: 0 0 6px lighten(#ee5f5b, 20%);
-    .box-shadow(@shadow);
+    //@shadow: 0 0 6px lighten(#ee5f5b, 20%);
+    //.box-shadow(@shadow);
   }
 }
 
