--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
@@ -253,7 +253,7 @@
                             data-type="cart"
                             data-action="add">
                             @(Model.ProductPrice.AvailableForPreOrder ? T("ShoppingCart.PreOrder") : T("ShoppingCart.AddToCart"))
-                            <i class="fa fa-cart-arrow-down"></i>      
+                            <i class="fa fa-lg fa-cart-arrow-down"></i>      
                         </a>
 					}
 					else
