Added warning when adding the ID field as a key field of an import profile

--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/_CreateOrUpdate.cshtml
@@ -140,6 +140,16 @@ else if (Model.ExistingFileNames.Count > 1)
 					@Html.ValidationMessageFor(model => model.KeyFieldNames)
 				</td>
 			</tr>
+			if (Model.ShowKeyFieldNote)
+			{
+				<tr>
+					<td colspan="2">
+						<div class="alert alert-warning">
+							@T("Admin.DataExchange.Import.KeyFieldNames.Note")
+						</div>
+					</td>
+				</tr>
+			}
 			<tr>
 				<td class="adminTitle">
 					@Html.SmartLabelFor(x => x.Skip)
