--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -490,7 +490,7 @@ th label {
 
 .modal-backdrop, 
 .modal-backdrop.fade.in {
-	.opacity(60);
+	opacity: 0.6;
 }
 
 .modal-header .close {
@@ -501,4 +501,9 @@ th label {
 .modal-large {
 	width: 800px !important;
 	margin: -250px 0 0 -400px !important;
+}
+
+.modal-xlarge {
+	width: 960px !important;
+	margin: -250px 0 0 -480px !important;
 }
