--- a/src/Presentation/SmartStore.Web/Views/Common/EntityPicker.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/EntityPicker.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EntityPickerModel
 @using SmartStore.Web.Models.Common;
 
-<div id="entity-picker-@(Model.Entity)-dialog" class="entity-picker modal modal-large hide fade" tabindex="-1">
+<div id="entity-picker-@(Model.Entity)-dialog" class="entity-picker modal modal-xlarge hide fade" tabindex="-1">
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal"><b>&#215;</b></button>
 		<h4 class="caption">&nbsp;</h4>
