--- a/src/Presentation/SmartStore.Web/Content/smartstore.entitypicker.css
+++ b/src/Presentation/SmartStore.Web/Content/smartstore.entitypicker.css
@@ -2,77 +2,121 @@
  	SmartStore Component: smartstore.entitypicker.css
 -------------------------------------------------------------- */
 
-.entity-picker-filter .item {
-	min-width: 320px;
+.entity-picker-list {
+    position: relative;
+    margin-left: -5px;
+    margin-right: -5px;
+}
+
+.entity-picker-list .item-wrap {
+    position: relative;
+    box-sizing: border-box;
+	display: block;
+    float: left;
+	width: 33.3332%;
+	padding: 0 5px;
 }
 
 .entity-picker-list .item {
-	display: inline-block;
-	width: 360px;
-	min-height: 54px;
-	max-height: 54px;
-	padding: 3px 4px;
-	margin: 2px 0 1px 0;
+    position: relative;
+    box-sizing: border-box;
+	display: block;
+	height: 70px;
+	padding: 8px;
+	margin: 5px 0;
 	border-radius: 3px;
-	border: #d4d4d4 solid 1px;
-	background-image: linear-gradient(to bottom, #fcfcfc, #e3e3e3);
-	background-color: #FCF8F0;
-}
-.entity-picker-list .selected {
-	box-shadow: 0 0 0 1px #FFCB7C;
-	border: #FFCB7C solid 1px;
-	background-image: linear-gradient(to bottom, #fcfcfc, #FFCB7C);
-	background-color: #F2EEE6;
 }
 .entity-picker-list .item:hover {
 	cursor: pointer;
 }
 .entity-picker-list .item:not(.selected):hover {
-	background-image: linear-gradient(to bottom, #fcfcfc, #cacaca);
-	background-color: #F2EEE6;
+	background-color: #f5f5f5;
 }
+
 .entity-picker-list .disable {
-	opacity: .4;
-	filter: Alpha(Opacity=40);
+	opacity: 0.4;
 }
-.entity-picker-list .thumb {
-	float: left;
-	width: 65px;
+
+.entity-picker-list .title {
+    font-weight: 400;
+    max-height: 36px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
-.entity-picker-list .img-polaroid {
-	padding: 2px;
-}
-.entity-picker-list .thumb img {
-	max-width: 50px;
-	max-height: 50px;
-}
-.entity-picker-list .label {
-	display: inline-block;
-	float: left;
-	margin-right: 5px;
-}
+
 .entity-picker-list .highlight {
-	color: #f00;
-	background-color: transparent;
+    font-weight: 700;
 }
+
 .entity-picker-list .summary {
-	font-size: 0.9em;
-	height: 2.65em;
-	min-height: 2.65em;
-	line-height: 1.22em;
-	vertical-align: top;
-	margin-top: 2px;
+    color: #aaa;
+	font-size: 12px;
+	height: 18px;
+	line-height: 18px;
+	vertical-align: middle;
 	overflow: hidden;
 }
 .entity-picker-list .published {
-	float: right; 
-	margin-top: -11px;
+    margin-left: 1px;
+    margin-right: 6px;
+    font-size: 15px;
+    line-height: 18px;
+    vertical-align: sub;
 }
+.entity-picker-list .published.fa-globe {
+    color: inherit;
+}
+.entity-picker-list .published.fa-eye-slash {
+    color: #aaa;
+}
+.entity-picker-list .item.selected .published {
+    color: #fff;
+}
+
 .entity-picker-list .list-footer {
 	clear: both;
-	float: left;
-	margin-top: 8px;
+	padding: 8px 12px 0 12px;
+    text-align: center;
 }
-.entity-picker-list .list-footer a {
-	padding-bottom: 2px;
+
+.entity-picker-list .thumb,
+.entity-picker-list .data {
+    position: relative;
+    box-sizing: border-box;
+    display: block;
 }
+.entity-picker-list .thumb {
+    display: table-cell;
+    width: 54px;
+    height: 54px;
+    padding: 2px;
+    text-align: center;
+    vertical-align: middle;
+}
+.entity-picker-list .item:hover .thumb,
+.entity-picker-list .item.selected .thumb {
+    background: #fff;
+    box-shadow: 1px 1px 2px rgba(0,0,0, 0.1);
+}
+.entity-picker-list .thumb img {
+	max-width: 100%;
+	max-height: 100%;
+}
+.entity-picker-list .thumb + .data {
+    position: absolute;
+    left: 72px;
+    right: 8px;
+    top: 8px;
+    bottom: 8px;
+}
+
+.entity-picker-list .item.selected {
+    background-color: #4060c0;
+}
+.entity-picker-list .item.selected .title {
+    color: #fff;
+}
+.entity-picker-list .item.selected .summary {
+    color: rgba(255,255,255, 0.6);
+}
+
