--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -503,7 +503,67 @@ th label {
 	margin: -250px 0 0 -400px !important;
 }
 
+
+// XLARGE MODAL
+// ------------------------------
+
 .modal-xlarge {
 	width: 960px !important;
 	margin: -250px 0 0 -480px !important;
+}
+
+
+// FLEX MODAL
+// ------------------------------
+
+.modal-flex {
+    top: 3% !important;
+    bottom: 3% !important;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+
+    &.fade.in {
+        display: -webkit-box !important;
+        display: -webkit-flex !important;
+        display: -ms-flexbox !important;
+        display: flex !important;
+    }
+
+    .modal-body {
+        max-height: initial;
+        overflow-y: auto;
+        overflow-x: hidden;
+        .display-flex();
+        -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-flex: 1;
+        -webkit-flex: 1;
+            -ms-flex: 1;
+                flex: 1;
+        -webkit-box-pack: start;
+        -webkit-justify-content: flex-start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
+        -webkit-box-align: stretch;
+        -webkit-align-items: stretch;
+            -ms-flex-align: stretch;
+                align-items: stretch;
+        -webkit-align-content: stretch;
+            -ms-flex-line-pack: stretch;
+                align-content: stretch;
+    }
+
+    .modal-flex-fill-area {
+        //overflow: hidden;
+        -webkit-box-flex: 1;
+        -webkit-flex: 1;
+            -ms-flex: 1;
+                flex: 1;
+    }
 }
