--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -1750,10 +1750,15 @@
             </td>
         </tr>
     </table>  
-    <div class="caption-container">
-        <h3 class="bordered">@T("Admin.Orders.OrderNotes.AddTitle")</h3>
-    </div>
+
     <table class="adminContent">
+		<tr>
+			<td colspan="2">
+				<div class="admin-config-group">
+					<div class="title">@T("Admin.Orders.OrderNotes.AddTitle")</div>
+				</div>
+			</td>
+		</tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.AddOrderNoteMessage)
