--- a/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
@@ -532,8 +532,9 @@
                             {
                             <tr>
                                 <td class="cart-total-left">
-                                    <strong>
-                                        @string.Format(T("Order.GiftCardInfo").Text, gc.CouponCode):</strong>
+                                    <strong>@string.Format(T("Order.GiftCardInfo").Text, gc.CouponCode):</strong>
+									<br />
+									<span class="nobr">@string.Format(T("ShoppingCart.Totals.GiftCardInfo.Remaining").Text, gc.Remaining)</span>
                                 </td>
                                 <td class="cart-total-right">
                                     <span class="nobr">
@@ -541,8 +542,8 @@
                                     </span>
                                 </td>
                             </tr>
-                            }
-                        }
+							}
+						}
                         @if (Model.RedeemedRewardPoints > 0)
                         {
                             <tr>
