--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/EstimateShipping.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/EstimateShipping.cshtml
@@ -88,7 +88,8 @@
                         {
                             <div class="shipping-option-item" style="margin-bottom: 8px">
                                 <div class="option-name">
-                                    @shippingOption.Name (@shippingOption.Price)
+                                    @Html.Raw(HttpUtility.HtmlDecode(shippingOption.Name))
+                                    (@shippingOption.Price)
                                 </div>
                                 <div class="option-description muted">
                                     @Html.Raw(shippingOption.Description)
